[project]
name = "safesight"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Eyal Roginski", email = "eyalrog1@gmail.com" },
    { name = "Mark Karlinsky", email = "34838287+markK24@users.noreply.github.com" },
    { name = "Omri Sde-Or", email = "omri.sdeor@gmail.com" }
]
dependencies = [
    "mlcroissant==1.0.*", # Requires python >= 3.10, which is incompatible with lavis
    "torch~=2.3.0",
    "torchvision~=0.18.0",
    "salesforce-lavis~=1.0.2",
]
readme = "README.md"
requires-python = "~= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/safesight"]
