[project]
name = "safesight"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Eyal Roginski", email = "eyalrog1@gmail.com" },
    { name = "Mark Karlinsky", email = "34838287+markK24@users.noreply.github.com" },
    { name = "Omri Sde-Or", email = "omri.sdeor@gmail.com" }
]
dependencies = [
    "mlcroissant>=1.0.5",
    "torch>=2.3.0",
    "ultralytics>=8.2.26",
    "pytorchvideo>=0.1.5",
    "transformers>=4.41.2",
    "evaluate>=0.4.2",
    "huggingface-hub>=0.23.2",
    "av>=12.1.0",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/safesight"]
