[project]
name = "safesight"
version = "0.1.0"
description = "Detecting traffic accidents on live camera footage."
authors = [
    { name = "Eyal Roginski", email = "eyalrog1@gmail.com" },
    { name = "Mark Karlinsky", email = "34838287+markK24@users.noreply.github.com" },
    { name = "Omri Sde-Or", email = "omri.sdeor@gmail.com" }
]
dependencies = [
    "mlcroissant~=1.0.5; python_version >= '3.10'",
    "salesforce-lavis~=1.0.2; python_version == '3.8.*'",
    "click~=8.1.7",
    "torch~=2.3.0",
    "torchvision~=0.18.0",
]
readme = "README.md"
requires-python = ">= 3.8"
#license = {text = "MIT"} ??


[project.scripts]
safesight = "safesight.cli:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/safesight"]
